Display product details in a modal

--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -6,3 +6,9 @@
     width: '10px';
     height: '5px';
 }
+
+.modalProductImage {
+    width: '10px';
+    height: '5px';
+    margin-left: auto;
+}
